# ayab-valdi

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PORT_AUDIT_AND_PLAN.md  README.md  SECURITY.md  TDD_GAP_PLAN.md  UX_RECOMMENDATIONS.md
src/: .bazelignore  .bazelrc  .cursorrules  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md
src/.cursor/rules/: README.md  android.md  bazel.md  compiler.md  cpp-runtime.md  ios.md  testing.md  typescript-tsx.md
src/modules/: tsconfig.json
src/modules/app_settings/: BUILD.bazel  tsconfig.json
src/modules/app_settings/src/: AboutScreen.tsx  BugReport.ts  PreferenceStorage.ts  Preferences.ts  PreferencesProvider.ts  PreferencesScreen.tsx  Types.ts
src/modules/app_settings/test/: AboutScreen.spec.tsx  PreferenceStorage.spec.ts  Preferences.spec.ts  PreferencesScreen.spec.tsx
src/modules/ayab_valdi/: BUILD.bazel  tsconfig.json
src/modules/ayab_valdi/src/: App.tsx  AppImageHandlers.ts  AppImageLogic.ts  AppKnitFooter.tsx  AppSessions.ts  AppSidebar.tsx  AppUiState.ts  AudioFeedback.ts  Feedback.ts  FirstRunTour.ts  HardwareTestModal.tsx  HardwareTestPanel.tsx  HardwareTestSession.ts  InlineTourBubble.tsx  KnitActionBanner.tsx  KnitProgressRow.tsx  KnitProgressRowLogic.ts  KnitSession.ts  KnitSessionUiLogic.ts  OnboardingBubble.tsx  PlatformAudioFeedback.ts  PreviewPalette.ts  PreviewPanel.tsx  ProgressAndStatus.tsx  ProgressRowDetail.ts  SerialPortList.ts  SerialPortPicker.tsx  SettingsModal.tsx  UserMessage.tsx  ValueNotifier.ts
src/modules/ayab_valdi/test/: App.spec.ts  AppCompactLayout.spec.tsx  AppImageHandlers.spec.ts  AppImageLogic.spec.ts  AppInfo.spec.ts  AppSessions.spec.ts  AppSidebarMachineIo.spec.tsx  AppSidebarPickerModal.spec.tsx  AppUiState.spec.ts  AudioFeedback.spec.ts  Feedback.spec.ts  FirstRunTour.spec.ts  HardwareTestModal.spec.tsx  HardwareTestSession.spec.ts  KnitActionBanner.spec.tsx  KnitProgressRowLogic.spec.ts  KnitSession.spec.ts  KnitSessionUiLogic.spec.ts  PreviewPalette.spec.ts  ProgressRowDetail.spec.ts  SerialPortList.spec.ts  SettingsModal.spec.tsx  StateMachine.spec.ts  UserMessage.spec.tsx
src/modules/constants/: BUILD.bazel  tsconfig.json
src/modules/constants/src/: AppInfo.ts  ExternalLink.ts  HelpHint.tsx  Interfaces.ts  KnittingConstants.ts  ModalCloseButton.tsx  NeedleColors.ts  OptionPickerModal.tsx  PickerTrigger.tsx  SerialConstants.ts  SidebarStyles.ts  StateMachineConstants.ts  Typography.ts  UiTheme.ts
src/modules/constants/test/: ExternalLink.spec.ts  Typography.spec.ts
src/modules/image_settings/: BUILD.bazel  tsconfig.json
src/modules/image_settings/src/: ImageSettingsComponent.tsx  ImageSettingsFieldControls.tsx  ImageSettingsLogic.ts  ImageSettingsTransformSection.tsx  OptionPickerModal.tsx  Types.ts
src/modules/image_settings/test/: ImageSettingsComponent.spec.tsx  ImageSettingsLogic.spec.ts  Types.spec.ts
src/modules/preview/: BUILD.bazel  tsconfig.json
src/modules/preview/src/: FormattedDisplay.tsx  FormattedDisplayLogic.ts  ImageTransform.ts  KnitSidePreviewLogic.ts  ModuleResourceBits.ts  Preview.tsx  PreviewSceneLayout.ts  PreviewTransforms.ts  PreviewViewportTypes.ts  PreviewZoom.ts  SamplePatternImageData.ts  SamplePatterns.ts  SamplePatternsModal.tsx  ZoomablePreviewViewport.tsx
src/modules/preview/test/: FormattedDisplayLogic.spec.ts  ImageTransform.spec.ts  KnitSidePreviewLogic.spec.ts  ModuleResourceBits.spec.ts  PreviewSceneLayout.spec.ts  PreviewTransforms.spec.ts  PreviewViewportTypes.spec.ts  SamplePatterns.spec.ts
src/modules/process_image/: BUILD.bazel  tsconfig.json
src/modules/process_image/android/: ProcessImageModuleFactory.kt
src/modules/process_image/cpp/: DesktopProcessImageModule.cpp
src/modules/process_image/ios/: SCCProcessImageNativeModuleFactory.m
src/modules/process_image/src/: CutPatternConverter.ts  PatFileLoader.ts  PatPatternConverter.ts  PatternFileLoader.ts  PatternImportBinary.ts  ProcessImageNative.d.ts  StpPatternConverter.ts
src/modules/process_image/test/: CutPatternConverter.golden.spec.ts  CutPatternConverter.spec.ts  PatFileLoader.spec.ts  PatPatternConverter.golden.spec.ts  PatPatternConverter.spec.ts  StpPatternConverter.golden.spec.ts  StpPatternConverter.spec.ts
src/modules/process_image/web/: ProcessImageNative.ts  tsconfig.json
src/modules/serial/: BUILD.bazel  tsconfig.json
src/modules/serial/android/: AndroidManifest.xml  SerialAppContextProvider.kt  SerialModuleFactory.kt
src/modules/serial/cpp/: MdnsDiscoveryMacOS.h  MdnsDiscoveryMacOS.mm  SerialModuleFactoryLinux.cpp  SerialModuleFactoryMacOS.mm
src/modules/serial/ios/: SCCSerialModuleFactory.m
src/modules/serial/src/: AsyncWriteQueue.ts  Communication.ts  CommunicationMock.ts  Control.ts  HardwareTestCommunicationMock.ts  NetworkDiscovery.ts  Serial.d.ts  SerialPortErrors.ts  SerialUri.ts  SerialWorkerService.ts
src/modules/serial/test/: AsyncWriteQueue.spec.ts  Communication.spec.ts  CommunicationMock.spec.ts  Control.spec.ts  HardwareTestCommunicationMock.spec.ts  NetworkDiscovery.spec.ts  SerialPortErrors.spec.ts  WebsocketTransport.spec.ts
src/modules/serial/web/: AsyncWriteQueue.ts  SerialUri.ts  SerialWeb.ts  WebsocketTransport.ts  tsconfig.json
src/modules/state_machine/: BUILD.bazel  tsconfig.json
src/modules/state_machine/src/: ColorQuantization.ts  ImageOrientation.ts  Machine.ts  ModeFunc.ts  Output.ts  Pattern.ts  StateMachine.ts  Status.ts  ValidateKnitConfig.ts
src/modules/state_machine/test/: ColorQuantization.spec.ts  ImageOrientation.spec.ts  ModeFunc.spec.ts  Pattern.spec.ts  Status.spec.ts  ValidateKnitConfig.spec.ts
src/patches/valdi/: 0001-Isolate-web-PersistentStoreNative-memory-by-store-name.patch  0002-Persist-web-PersistentStoreNative-via-localStorage.patch
src/patches/valdi_widgets/: 0001-Wire-android_mvn-and-platforms-into-widgets-MODULE.patch
src/web/: .gitignore  README.md  package-lock.json  package.json  start.sh  webpack.config.js
src/web/e2e/: run.mjs
src/web/scripts/: ensure-ayab-web.js
src/web/src/: App.js  App.scss  index.html  index.js
(+56 files in other folders)
