module(name = "ayab_valdi", version = "0.1")

# Pinned upstream commits (keep in sync with .github/valdi-deps.env).
# Update with: ./scripts/pin-valdi-deps.sh <valdi-sha> <widgets-sha>
VALDI_REF = "8776dbd68e369efb168deb7688f10dddde8cb121"
WIDGETS_REF = "eaf2af1682c406abfa87ebf5c87d01dd44e14c9c"

VALDI_URL = "https://github.com/Snapchat/Valdi/archive/{}.tar.gz".format(VALDI_REF)
VALDI_STRIP_PREFIX = "Valdi-{}".format(VALDI_REF)

WIDGETS_URL = "https://github.com/Snapchat/Valdi_Widgets/archive/{}.tar.gz".format(WIDGETS_REF)
WIDGETS_STRIP_PREFIX = "Valdi_Widgets-{}".format(WIDGETS_REF)

bazel_dep(name = "valdi", version = "0.1")
archive_override(
    module_name = "valdi",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX,
    patches = [
        "//patches/valdi:0001-Isolate-web-PersistentStoreNative-memory-by-store-name.patch",
        "//patches/valdi:0002-Persist-web-PersistentStoreNative-via-localStorage.patch",
    ],
    patch_strip = 1,
)

bazel_dep(name = "android_macros")
archive_override(
    module_name = "android_macros",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/macros",
)

bazel_dep(name = "snap_macros")
archive_override(
    module_name = "snap_macros",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/valdi/snap_macros",
)

bazel_dep(name = "snap_client_toolchains")
archive_override(
    module_name = "snap_client_toolchains",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/toolchains",
)

bazel_dep(name = "snap_platforms")
archive_override(
    module_name = "snap_platforms",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/platforms",
)

bazel_dep(name = "skia_user_config")
archive_override(
    module_name = "skia_user_config",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/third-party/skia_user_config",
)

bazel_dep(name = "rules_hdrs")
archive_override(
    module_name = "rules_hdrs",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/third-party/rules_hdrs",
)

bazel_dep(name = "valdi_toolchain")
archive_override(
    module_name = "valdi_toolchain",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bin",
)

bazel_dep(name = "valdi_widgets")
archive_override(
    module_name = "valdi_widgets",
    urls = [WIDGETS_URL],
    strip_prefix = WIDGETS_STRIP_PREFIX,
    patches = [
        "//patches/valdi_widgets:0001-Wire-android_mvn-and-platforms-into-widgets-MODULE.patch",
    ],
    patch_strip = 1,
)

valdi_toolchains = use_extension("@valdi//bzl:valdi_toolchains.bzl", "valdi_toolchains")
use_repo(valdi_toolchains, "local_config_apple_cc_toolchains", "local_config_apple_cc", "llvm_toolchain", "llvm_toolchain_llvm")
register_toolchains("@local_config_apple_cc_toolchains//:all")
register_toolchains("@llvm_toolchain//:all")

# Android: hermetic SDK/NDK downloaded by Valdi's module extensions — no local
# ANDROID_HOME required. rules_android's own SDK/NDK extensions are overridden
# to the hermetic repos so their toolchains resolve without an installed SDK.
bazel_dep(name = "rules_android", version = "0.6.5")
bazel_dep(name = "rules_android_ndk", version = "0.1.3")

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions",
)
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

hermetic_android_sdk_extension = use_extension("@valdi//bzl:hermetic_android_sdk.bzl", "hermetic_android_sdk_extension")
hermetic_android_sdk_extension.configure(
    api_level = 36,
    build_tools_version = "34.0.0",
)
use_repo(hermetic_android_sdk_extension, "androidsdk")

rules_android_sdk_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
)
override_repo(rules_android_sdk_extension, androidsdk = "androidsdk")

register_toolchains(
    "@rules_android//toolchains/android:all",
    "@rules_android//toolchains/android_sdk:all",
)
register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

hermetic_ndk_extension = use_extension("@valdi//bzl:hermetic_ndk.bzl", "hermetic_ndk_extension")
use_repo(hermetic_ndk_extension, "androidndk")

rules_android_ndk_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
override_repo(rules_android_ndk_extension, androidndk = "androidndk")

register_toolchains("@androidndk//:all")

# Pin the exact version our .valdi-registry mirror carries pre-patched (its
# source.json bakes in rules_kotlin_android_sdk.patch etc. automatically) —
# plain BCR rules_kotlin still references
# @bazel_tools//tools/android:android_jar (Bazel's legacy native Android SDK
# provider), which crashes against our Starlark-based hermetic SDK toolchain.
bazel_dep(name = "rules_kotlin", version = "1.9.0")
single_version_override(module_name = "rules_kotlin", version = "1.9.0")

single_version_override(module_name = "protobuf", version = "27.0")
single_version_override(module_name = "rules_apple", version = "4.0.0")
single_version_override(module_name = "rules_pkg", version = "0.9.1")
single_version_override(module_name = "zlib", version = "1.3.2")

bazel_dep(name = "rules_jvm_external", version = "6.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "serial_mvn",
    artifacts = [
        # Distributed via JitPack, not Maven Central (the library's own
        # com.hoho.android.usbserial package name is not its Maven group).
        "com.github.mik3y:usb-serial-for-android:3.7.0",
    ],
    repositories = [
        "https://jitpack.io",
        "https://repo1.maven.org/maven2",
        "https://maven.google.com",
    ],
    fetch_sources = True,
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    use_starlark_android_rules = True,
    version_conflict_policy = "pinned",
)
use_repo(maven, "serial_mvn")

# Android builds: module BUILD files reference @android_mvn (Valdi's
# maven.install), which must be mapped into this repo's namespace.
use_repo(maven, "android_mvn")

bazel_dep(name = "aspect_rules_ts", version = "3.7.0")
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
use_repo(rules_ts_ext, "npm_typescript")
